--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.14",
     "mongoose-unique-validator": "^2.0.3",
+    "node-pre-gyp": "^0.17.0",
     "simpl-schema": "^1.10.2"
   }
 }
