--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "@auth0/angular-jwt": "^3.0.1",
     "rxjs": "~6.6.0",
     "rxjs-compat": "6.6.3",
     "tslib": "^2.0.0",
